# Workspace

./: .Workspace Configuration.txt  .gitattributes  .gitignore  .swiftlint.yml  .travis.yml  CONTRIBUTING.md  LICENSE.md  Package.pins  Package.resolved  Package.swift  README.md  RealTimeLog.sh  Refresh (Linux).sh  Refresh (macOS).command  Refresh Workspace (Linux).sh  Refresh Workspace (macOS).command  Related Projects.md  Validate (macOS).command  Workspace.swift  index.html
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom.md  en-CA Documentation Correction.md  en-CA Feature Request.md  🇨🇦EN Bug Report.md  🇨🇦EN Feature Request.md  🇨🇦EN Issue.md  🇨🇦EN Question.md  🇩🇪DE Frage.md  🇬🇧EN Feature Request.md  🇺🇸EN Bug Report.md  🇺🇸EN Documentation Correction.md  🇺🇸EN Feature Request.md  🇺🇸EN Question.md
.github/Workflow Steps/: Make Space.yaml
.github/disabled workflows/: Windows.yaml
.github/workflows/: Amazon Linux.yaml  Android.yaml  Build Toolchains.yaml  CentOS.yaml  Deployment.yaml  Documentation Deployment.yaml  Miscellaneous.yaml  Swift 5.6 (Amazon Linux).yaml  Swift 5.6 (Android).yaml  Swift 5.6 (Ubuntu).yaml  Swift 5.6 (Windows).yaml  Swift 5.6 (iOS).yaml  Swift 5.6 (macOS).yaml  Swift 5.6 (tvOS).yaml  Swift 5.6 (watchOS).yaml  Swift 5.7 (Amazon Linux).yaml  Swift 5.7 (Ubuntu).yaml  Swift 5.7 (macOS).yaml  Toolchain Assembly.yaml  Ubuntu.yaml  Web.yaml  Windows (SwiftPM).yaml  Windows.yaml  Workspace Validation.yaml  iOS.yaml  macOS.yaml  tvOS.yaml  watchOS.yaml
.github/workflows/Windows/: CMakeLists.txt  SDK.json  WindowsMain.swift  macOS Command.txt  main.swift
CMake/: Android.cmake  AndroidStandardLibrary.cmake  AndroidSwiftFlags.cmake  XML_2.cmake  cURL.cmake
Documentation/: Code Coverage.md  Compiler Warnings.md  Configuring Workspace.md  Continuous Integration.md  Contributing Instructions.md  Dependency Graph.md  Documentation  Documentation Generation.md  Documentation Inheritance.md  Examples.md  File Headers.md  Git.md  Ignoring File Types.md  Licence.md  Linux Notes.md  Manual Warnings.md  Operating Systems.md  Project Types.md  Proofreading.md  Read‐Me.md  Related Projects.md  Resources.md  Responsibilities.md  Scripts.md  Simulator.md  Test Coverage.md  Testing.md  Xcode.md  🇨🇦EN Read Me.md  🇨🇦EN Related Projects.md
HelloWorld/: Package.swift
Plugins/ConfigurationEmbedder/: ConfigurationEmbedder.swift
Resources/Licences/: Apache 2.0.txt  Copyright.md  GNU General Public 3.0.md  MIT.md  Unlicense.md
Resources/Scripts/: Refresh Workspace (Linux).sh  Refresh Workspace (macOS).command  Validate Changes (Linux).sh  Validate Changes (macOS).command
Resources/WSDocumentation/: Page.html  Redirect.html  Root.css  Script.js  Site.css
Resources/WSXcode/: Proofread Scheme.xcscheme  Proofread.xcscheme
Resources/WorkspaceConfiguration/: Contributing Template.txt  Issue Template.txt  Mitwirken Vorlage.txt  Pull Request Template.md
Scripts/: Refresh Workspace.command  Validate Changes (Linux).sh  Validate Changes.command
Sources/GeneralImports/: Exports.swift
Sources/GeneralTestImports/: Exports.swift
Sources/Interface/: Program.swift  Resources.swift  SDGCornerstone.swift
Sources/LocalizationPrimitives/: ContentLocalization.swift
Sources/Localizations/: ContentLocalization.swift  Exports.swift  InterfaceLocalization.swift
Sources/Project/: APIDocumentationConfiguration.swift  DocumentationConfiguration.swift  Exports.swift  FileHeaderConfiguration.swift  GitHubConfiguration.swift  PackageRepository.swift  ProductType.swift  ReadMeConfiguration.swift  Script.swift  Template.swift
Sources/WSContinuousIntegration/: ContinuousIntegration.swift  ContinuousIntegrationJob.swift  GraphNode.swift  PackageGraph.swift  PackageRepository.swift  ResolvedProduct.swift  ResolvedTarget.swift
Sources/WSCustomTask/: CustomTask.swift  SwiftPackage.swift  ThirdPartyTool.swift
Sources/WSDependencyLocalizations/: SDGCornerstone.swift
Sources/WSDocumentation/: APIElement.swift  CommandInterface.swift  CommandInterfaceInformation.swift  CommandPage.swift  Constrained.swift  DocumentationStatus.swift  ElementSyntax.swift  FunctionParameterSyntax.swift  HTML.swift  HTMLElement.swift  IndexSectionIdentifier.swift  InterfaceLocalization.swift  Jazzy.swift  LocalizationIdentifer.swift  LocalizationIdentifier.swift  PackageAPI.swift  PackageCLI.swift  PackageInterface.swift  PackageRepository.swift  Page.swift  Redirect.swift  Resources.swift  Symbol.swift  SymbolDocumentation.swift  SymbolPage.swift  TextDirection.swift
Sources/WSExamples/: PackageRepository.swift
Sources/WSFileHeaders/: PackageRepository.swift
Sources/WSGeneralImports/: Exports.swift  ProcessInfo.swift  TravisCI.swift
Sources/WSGeneralTestImports/: Exports.swift
Sources/WSGit/: PackageRepository.swift
Sources/WSGitHub/: PackageRepository.swift
Sources/WSInterface/: CheckForUpdates.swift  Document.swift  Normalize.swift  Proofread.swift  Resources.swift  Test.swift  Workspace.swift
Sources/WSLicence/: Licence.swift  PackageRepository.swift  Resources.swift
Sources/WSProject/: URL.swift  (+15 more)
Tests/: LinuxMain.swift
Tests/Mock Projects/After/AllTasks/.github/workflows/Windows/: CMakeLists.txt  WindowsMain.swift
Tests/Mock Projects/After/ContinuousIntegrationWithoutScripts/.github/workflows/Windows/: CMakeLists.txt  WindowsMain.swift
Tests/Mock Projects/After/Deutsch/.github/workflows/Windows/: CMakeLists.txt  WindowsMain.swift
Tests/Mock Projects/After/SDGLibrary/.github/workflows/Windows/: CMakeLists.txt  WindowsMain.swift
Workspace/: metadata.json
WorkspaceConfiguration/: metadata.json
docs/: index.html
🇨🇦EN/: About.html  Importing.html  Installation.html  Related Projects.html  Workspace.html  index.html
🇩🇪DE/: Einführung.html  Installierung.html  Verwandte Projekte.html  Workspace.html  index.html
🇬🇧EN/: About.html  Importing.html  Installation.html  Related Projects.html  Workspace.html  index.html
🇺🇸EN/: About.html  Importing.html  Installation.html  Related Projects.html  Workspace.html  index.html
(+4690 files in other folders)
